<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context=".Presentation.AccessAcount.Register.Implementations.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:layout_marginTop="@dimen/_4dp"
        android:importantForAccessibility="no"
        android:src="@mipmap/ic_logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_35dp"
        android:paddingBottom="@dimen/_10dp"
        android:background="@drawable/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/tv_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_user"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_container_email_register"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_register">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingStart="@dimen/_10dp"
                    tools:ignore="RtlSymmetry"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edt_email"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_name_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_container_email_register">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingStart="@dimen/_10dp"
                    tools:ignore="RtlSymmetry"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edt_email"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_phone_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_container_name_register">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_register"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingStart="@dimen/_10dp"
                    tools:ignore="RtlSymmetry"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edt_email"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_pass_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_container_phone_register">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_pass_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass_register"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingStart="@dimen/_10dp"
                    tools:ignore="RtlSymmetry"
                    android:inputType="textPassword"
                    android:background="@drawable/edt_email"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_conf_pass_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_container_pass_register">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:text="@string/conf_password"/>
            <EditText
                android:id="@+id/et_conf_pass_register"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingStart="@dimen/_10dp"
                tools:ignore="RtlSymmetry"
                android:background="@drawable/edt_email"
                android:hint="@string/conf_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/cursor_general" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCrear_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:background="@drawable/btn_general"
            android:text="@string/btn_create"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_container_conf_pass_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>